# src/config/swagger.json
@@ -11,6 +11,10 @@
     {
       "name": "auth",
       "description": "Create account and login"
+    },
+    {
+      "name": "user profile",
+      "description": "update and retrieve user profile"
     }
   ],
   "schemes": ["https", "http"],
@@ -57,10 +61,97 @@
           }
         }
       }
+    },
+    "/user/profile/{email}": {
+      "patch": {
+        "tags": ["user profile"],
+        "summary": "Update user profile",
+        "description": "This endpoint updates a user profile",
+        "operationId": "updateProfile",
+        "produces": ["application/json"],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "email",
+            "in": "path",
+            "required": true,
+            "description": "user email",
+            "schema": {
+              "type": "string",
+              "format": "email"
+            }
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Information needed to update a user",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/UserProfile"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "user account updated successfully",
+            "schema": {
+              "$ref": "#/definitions/UserProfileResponse"
+            }
+          },
+          "400": {
+            "description": "email is required, and should follow this format: myemail@domain.com"
+          },
+          "500": {
+            "description": "database error"
+          }
+        }
+      },
+      "get": {
+        "tags": ["user profile"],
+        "summary": "Retrieve user profile",
+        "description": "This endpoint retrieve a user profile",
+        "operationId": "retrieveProfile",
+        "produces": ["application/json"],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "email",
+            "in": "path",
+            "required": true,
+            "description": "user email",
+            "schema": {
+              "type": "string",
+              "format": "email"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "user account retrieved successfully",
+            "schema": {
+              "$ref": "#/definitions/UserProfileResponse"
+            }
+          },
+          "400": {
+            "description": "email is required, and should follow this format: myemail@domain.com"
+          },
+          "500": {
+            "description": "database error"
+          }
+        }
+      }
     }
   },
   "definitions": {
-    "Signup": {
+    "UserProfile": {
       "type": "object",
       "properties": {
         "firstname": {
@@ -81,6 +172,38 @@
     "AuthResponse": {
       "type": "object",
       "properties": {
+        "phoneNumber": {
+          "type": "string"
+        },
+        "gender": {
+          "type": "string"
+        },
+        "prefferedLanguage": {
+          "type": "string"
+        },
+        "prefferedCurrency": {
+          "type": "string"
+        },
+        "birthDate": {
+          "type": "string"
+        },
+        "address": {
+          "type": "string"
+        },
+        "department": {
+          "type": "string"
+        },
+        "lineManager": {
+          "type": "string"
+        }
+      }
+    },
+    "UserProfileResponse": {
+      "type": "object",
+      "properties": {
+        "message": {
+          "type": "string"
+        },
         "status": {
           "type": "string"
         },
@@ -102,6 +225,39 @@
                 "type": "string"
               },
               "email": {
+                "type": "string"
+              },
+              "phoneNumber": {
+                "type": "number"
+              },
+              "gender": {
+                "type": "string"
+              },
+              "prefferedLanguage": {
+                "type": "string"
+              },
+              "prefferedCurrency": {
+                "type": "string"
+              },
+              "birthDate": {
+                "type": "date"
+              },
+              "address": {
+                "type": "string"
+              },
+              "department": {
+                "type": "string"
+              },
+              "lineManager": {
+                "type": "string"
+              },
+              "role": {
+                "type": "string"
+              },
+              "createdAt": {
+                "type": "string"
+              },
+              "updateAt": {
                 "type": "string"
               }
             }
