# src/controllers/UserController.js
@@ -1,6 +1,6 @@
 import UserService from '../services/UserService';
-import Responses from '../utils/Responses';
 import Helper from '../utils/Helper';
+import Responses from '../utils/Responses';
 
 /**
  * @class
@@ -17,31 +17,94 @@ export default class UserController {
    * @returns {object} JSON response
    * @memberof UserController
    */
-<<<<<<< HEAD
-  static signup(req, res) {
-    let { firstName, lastName, email } = req.body;
-    const { password } = req.body;
-    firstName = firstName.trim();
-    lastName = lastName.trim();
-    email = email.trim().toLowerCase();
-    const user = {
-      firstName, lastName, email, password
-    };
-    UserService.signup(user).then(response => {
+  static async signup(req, res) {
+    const { body } = req;
+    try {
+      const newUser = await UserService.signup(body);
       const result = {
-        id: response.id,
-        email: response.email,
-        firstName: response.firstName,
-        lastName: response.lastName
+        id: newUser.id,
+        email: newUser.email
       };
-      const token = Helper.generateToken({ id: response.id, email: response.email });
-      Responses.setSuccess(201, 'user account created successfully',
-        { token, ...result });
+      const token = Helper.generateToken(result);
+      Responses.setSuccess(201, { token, ...result }, 'user account created successfully');
       return Responses.send(res);
-    }).catch(() => {
+    } catch (error) {
       Responses.setError(500, 'database error');
       return Responses.send(res);
-    });
+    }
+  }
+  /**
+   * @method updateUserProfile
+   * @description Implements userprofile settings endpoint
+   * @static
+   * @param {object} req - Request object
+   * @param {object} res - Response object
+   * @returns {object} JSON response
+   * @memberof UserController
+   */
+  static async updateUserProfile(req, res) {
+    const { body, user, params} = req;
+    if (!(user.email === params.email)){
+      Responses.setError(401, 'You are not allowed to edit this profile');
+      return Responses.send(res);
+    }
+    try {
+      let updateUser = await UserService.updateUser(body, user.id, params.email);
+      delete updateUser[0].dataValues.password
+      Responses.setSuccess(201, updateUser[0], 'user account updated successfully');
+      return Responses.send(res);
+    } catch (error) {
+      Responses.setError(500, 'database error');
+      return Responses.send(res);
+    }
+  }
+
+  /**
+   * @method retrieveUserProfile
+   * @description Implements userprofile settings endpoint
+   * @static
+   * @param {object} req - Request object
+   * @param {object} res - Response object
+   * @returns {object} JSON response
+   * @memberof UserController
+   */
+  static async retrieveUserProfile(req, res) {
+    const {user, params} = req;
+    if (!(user.email === params.email)){
+      Responses.setError(401, 'You are not allowed to see this profile');
+      return Responses.send(res);
+    }
+    try {
+      let retrieveUser = await UserService.retrieveUser(user.id, params.email);
+      delete retrieveUser.dataValues.password
+      Responses.setSuccess(200, retrieveUser, 'user account retrieved successfully');
+      return Responses.send(res);
+    } catch (error) {
+      Responses.setError(500, 'database error');
+      return Responses.send(res);
+    }
+  }
+
+
+  /**
+   * @method assignRole
+   * @description Implements userprofile settings endpoint
+   * @static
+   * @param {object} req - Request object
+   * @param {object} res - Response object
+   * @returns {object} JSON response
+   * @memberof UserController
+   */
+
+  static async assignRole({ body }, res) {
+    try {
+      const assign = await UserService.assignUser(body);
+      Responses.setSuccess(201, assign);
+      return Responses.send(res);
+    } catch (error) {
+      Responses.setError(500, 'database error');
+      return Responses.send(res);
+    }
   }
 
   /**
@@ -62,27 +125,5 @@ export default class UserController {
       Responses.setError(500, 'database error');
       return Responses.send(res);
     });
-=======
-  static async signup(req, res) {
-    const {
-      firstname, lastname, email, password
-    } = req.body;
-    const user = {
-      firstname, lastname, email, password
-    };
-    try {
-      const newUser = await UserService.signup(user);
-      const result = {
-        id: newUser.id,
-        email: newUser.email
-      };
-      const token = Helper.generateToken(result);
-      Responses.setSuccess(201, { token, ...result }, 'user account created successfully');
-      return Responses.send(res);
-    } catch (error) {
-      Responses.setError(500, 'database error');
-      Responses.send(res);
-    }
->>>>>>> feat(signup-api): implement user signup endpoint
   }
 }
